# backend/app/models/module.py
@@ -1,18 +1,18 @@
 from sqlmodel import SQLModel, Field
 from typing import Optional
 
-class TodoBase(SQLModel):
+class ModuleBase(SQLModel):
     title: str
     description: Optional[str] = None
     is_completed: bool = False
 
-class TodoCreate(TodoBase):
+class ModuleCreate(ModuleBase):
     pass
 
-class Todo(TodoBase, table=True):
+class Module(ModuleBase, table=True):
     id: Optional[int] = Field(default=None, primary_key=True)
 
-class TodoUpdate(TodoBase):
+class ModuleUpdate(ModuleBase):
     title: Optional[str] = None
     description: Optional[str] = None
     is_completed: Optional[bool] = None
