# frontend/openapi.json
@@ -11,13 +11,13 @@
     }
   ],
   "paths": {
-    "/api/v1/todo/": {
+    "/api/v1/module/": {
       "get": {
         "tags": [
-          "todo"
+          "module"
         ],
-        "summary": "List All Todo",
-        "operationId": "list_all_todo_api_v1_todo__get",
+        "summary": "List All Module",
+        "operationId": "list_all_module_api_v1_module__get",
         "responses": {
           "200": {
             "description": "Successful Response",
@@ -25,10 +25,10 @@
               "application/json": {
                 "schema": {
                   "items": {
-                    "$ref": "#/components/schemas/TodoRead"
+                    "$ref": "#/components/schemas/ModuleRead"
                   },
                   "type": "array",
-                  "title": "Response List All Todo Api V1 Todo  Get"
+                  "title": "Response List All Module Api V1 module Get"
                 }
               }
             }
@@ -37,15 +37,15 @@
       },
       "post": {
         "tags": [
-          "todo"
+          "module"
         ],
-        "summary": "Create Todo",
-        "operationId": "create_todo_api_v1_todo__post",
+        "summary": "Create Module",
+        "operationId": "create_module_api_v1_module__post",
         "requestBody": {
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/TodoCreate"
+                "$ref": "#/components/schemas/ModuleCreate"
               }
             }
           },
@@ -57,7 +57,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/TodoRead"
+                  "$ref": "#/components/schemas/ModuleRead"
                 }
               }
             }
@@ -65,21 +65,21 @@
         }
       }
     },
-    "/api/v1/todo/{todo_id}": {
+    "/api/v1/module/{module_id}": {
       "get": {
         "tags": [
-          "todo"
+          "module"
         ],
-        "summary": "Get Todo",
-        "operationId": "get_todo_api_v1_todo__todo_id__get",
+        "summary": "Get a single Module",
+        "operationId": "get_module_api_v1_module_id__get",
         "parameters": [
           {
-            "name": "todo_id",
+            "name": "module_id",
             "in": "path",
             "required": true,
             "schema": {
               "type": "integer",
-              "title": "Todo Id"
+              "title": "Module Id"
             }
           }
         ],
@@ -89,7 +89,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/TodoRead"
+                  "$ref": "#/components/schemas/ModuleRead"
                 }
               }
             }
@@ -98,111 +98,26 @@
       },
       "put": {
         "tags": [
-          "todo"
+          "module"
         ],
-        "summary": "Update Todo",
-        "operationId": "update_todo_api_v1_todo__todo_id__put",
+        "summary": "Update a Module",
+        "operationId": "update_module_api_v1_module_id__put",
         "parameters": [
           {
-            "name": "todo_id",
+            "name": "module_id",
             "in": "path",
             "required": true,
             "schema": {
               "type": "integer",
-              "title": "Todo Id"
+              "title": "Module Id"
             }
           }
         ],
         "requestBody": {
-          "required": true,
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/TodoUpdateSchema"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/TodoRead"
-                }
-              }
-            }
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "todo"
-        ],
-        "summary": "Delete Todo",
-        "operationId": "delete_todo_api_v1_todo__todo_id__delete",
-        "parameters": [
-          {
-            "name": "todo_id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "title": "Todo Id"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "title": "Response Delete Todo Api V1 Todo  Todo Id  Delete"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/v1/patient/": {
-      "get": {
-        "tags": [
-          "patient"
-        ],
-        "summary": "List All Patient",
-        "operationId": "list_all_patient_api_v1_patient__get",
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "items": {
-                    "$ref": "#/components/schemas/PatientRead"
-                  },
-                  "type": "array",
-                  "title": "Response List All Patient Api V1 patient Get"
-                }
-              }
-            }
-          }
-        }
-      },
-      "post": {
-        "tags": [
-          "patient"
-        ],
-        "summary": "Create Patient",
-        "operationId": "create_patient_api_v1_patient__post",
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/PatientCreate"
+                "$ref": "#/components/schemas/ModuleUpdate"
               }
             }
           },
@@ -214,79 +129,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/PatientRead"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/v1/patient/{patient_id}": {
-      "get": {
-        "tags": [
-          "patient"
-        ],
-        "summary": "Get a single Patient",
-        "operationId": "get_patient_api_v1_patient_id__get",
-        "parameters": [
-          {
-            "name": "patient_id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "title": "Patient Id"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/PatientRead"
-                }
-              }
-            }
-          }
-        }
-      },
-      "put": {
-        "tags": [
-          "patient"
-        ],
-        "summary": "Update a Patient",
-        "operationId": "update_patient_api_v1_patient_id__put",
-        "parameters": [
-          {
-            "name": "patient_id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "title": "Patient Id"
-            }
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/PatientUpdate"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/PatientRead"
+                  "$ref": "#/components/schemas/ModuleRead"
                 }
               }
             }
@@ -295,18 +138,18 @@
       },
       "delete": {
         "tags": [
-          "patient"
+          "module"
         ],
-        "summary": "Delete a Patient",
-        "operationId": "delete_patient_api_v1_patient_id__delete",
+        "summary": "Delete a Module",
+        "operationId": "delete_module_api_v1_module_id__delete",
         "parameters": [
           {
-            "name": "patient_id",
+            "name": "module_id",
             "in": "path",
             "required": true,
             "schema": {
               "type": "integer",
-              "title": "Patient Id"
+              "title": "Module Id"
             }
           }
         ],
@@ -320,108 +163,7 @@
   },
   "components": {
     "schemas": {
-      "TodoCreate": {
-        "properties": {
-          "title": {
-            "type": "string",
-            "title": "Title"
-          },
-          "description": {
-            "anyOf": [
-              {
-                "type": "string"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Description"
-          },
-          "is_completed": {
-            "type": "boolean",
-            "title": "Is Completed",
-            "default": false
-          }
-        },
-        "type": "object",
-        "required": [
-          "title"
-        ],
-        "title": "TodoCreate"
-      },
-      "TodoRead": {
-        "properties": {
-          "id": {
-            "type": "integer",
-            "title": "Id"
-          },
-          "title": {
-            "type": "string",
-            "title": "Title"
-          },
-          "description": {
-            "anyOf": [
-              {
-                "type": "string"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Description"
-          },
-          "is_completed": {
-            "type": "boolean",
-            "title": "Is Completed"
-          }
-        },
-        "type": "object",
-        "required": [
-          "id",
-          "title",
-          "is_completed"
-        ],
-        "title": "TodoRead"
-      },
-      "TodoUpdateSchema": {
-        "properties": {
-          "title": {
-            "anyOf": [
-              {
-                "type": "string"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Title"
-          },
-          "description": {
-            "anyOf": [
-              {
-                "type": "string"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Description"
-          },
-          "is_completed": {
-            "anyOf": [
-              {
-                "type": "boolean"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Is Completed"
-          }
-        },
-        "type": "object",
-        "title": "TodoUpdateSchema"
-      },
+      
       "ValidationError": {
         "properties": {
           "loc": {
@@ -455,88 +197,46 @@
         ],
         "title": "ValidationError"
       },
-      "PatientCreate": {
+      "ModuleCreate": {
         "properties": {
-          "name": {
+          "title": {
             "type": "string",
-            "title": "Name"
-          },
-          "age": {
-            "type": "integer",
-            "title": "Age"
-          },
-          "gender": {
-            "type": "string",
-            "title": "Gender"
-          },
-          "contact_information": {
-            "type": "string",
-            "title": "Contact_information"
+            "title": "Title"
           }
         },
         "type": "object",
         "required": [
-          "name",
-          "age",
-          "gender",
-          "contact_information"
+          "title"
         ],
-        "title": "PatientCreate"
+        "title": "ModuleCreate"
       },
-      "PatientRead": {
+      "ModuleRead": {
         "properties": {
           "id": {
             "type": "integer",
             "title": "Id"
           },
-          "name": {
+          "title": {
             "type": "string",
-            "title": "Name"
-          },
-          "age": {
-            "type": "integer",
-            "title": "Age"
-          },
-          "gender": {
-            "type": "string",
-            "title": "Gender"
-          },
-          "contact_information": {
-            "type": "string",
-            "title": "Contact_information"
+            "title": "Title"
           }
         },
         "type": "object",
         "required": [
           "id",
-          "name",
-          "age",
-          "gender",
-          "contact_information"
+          "title"
         ],
-        "title": "PatientRead"
+        "title": "ModuleRead"
       },
-      "PatientUpdate": {
+      "ModuleUpdate": {
         "properties": {
-          "name": {
+          "title": {
             "type": "string",
-            "title": "Name"
-          },
-          "age": {
-            "type": "integer",
-            "title": "Age"
-          },
-          "gender": {
-            "type": "string",
-            "title": "Gender"
-          },
-          "contact_information": {
-            "type": "string",
-            "title": "Contact_information"
+            "title": "Title"
           }
         },
         "type": "object",
-        "title": "PatientUpdate"
+        "title": "ModuleUpdate"
       }
     }
   }
